# auto-ets2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  PropertySheet.props  Untitled.ipynb  auto-ets2.sln  debug.props  erf_net.trt  release.props
control/: control.vcxproj  control.vcxproj.filters
controller_test/: controller_test.vcxproj  controller_test.vcxproj.filters  main.cpp
darknet_test/: Source.cpp  darknet_test.vcxproj
ets2_sampler/: ets2_sampler.vcxproj  ets2_sampler.vcxproj.filters
keyboard_test/: Source.cpp  keyboard_test.vcxproj
models/PINet/: agent.py  hourglass_network.py  parameters.py  util.py  util_hourglass.py
models/erfnet/: erfnet.py
models/scnn_pytorch/: export_onnx.py  model.py
mouse_ctrl_test/: Source.cpp  mouse_ctrl_test.vcxproj
navigator_test/: Source.cpp  navigator_test.vcxproj  navigator_test.vcxproj.filters
opencv_dnn_test/: Source.cpp  opencv_dnn_test.vcxproj
pytorch_test/: main.cpp  pytorch_test.vcxproj
scripts/: Untitled.ipynb  crop_map.ipynb  erfnet.ipynb  export_erf_net.ipynb  lane_cv.ipynb  lane_detector.ipynb  opencv_dnn.ipynb  opencv_onnx.ipynb  pocket.py  test_ets2_samples.py  voice.ipynb  voice_loopback.py  yolo.ipynb  yolo_cv_cuda.ipynb
src/: CMakeLists.txt  Control.h  InfoCollector.cpp  InfoCollector.h  Input.h  LaneDetector.h  LaneDetector_pt.h  Navigator.h  ObjectDetector.cpp  ObjectDetector.h  ScreenCapturer.cpp  ScreenCapturer.h  config.h  main.cpp
src/ets2-sampler/: Sampler.cpp
tensorrt_test/: main.cpp  tensorrt_test.vcxproj  tensorrt_test.vcxproj.filters
test/: CMakeLists.txt  InfoCollector_test.cpp  LaneDetector_test.cpp  ObjectDetector_test.cpp  ScreenCapturer_test.cpp  test.cpp
weights/: yolov3.cfg  yolov4.cfg
yolo_cv_dnn_test/: Source.cpp  yolo_cv_dnn_test.vcxproj
yolo_opencv_dnn_test/: main.cpp  yolo_opencv_dnn_test.vcxproj
yolotensorrt_test/: main.cpp  yolotensorrt_test.vcxproj  yolotensorrt_test.vcxproj.filters
